--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -3,8 +3,8 @@
   display: inline-flex;
   align-items: center;
   color: rgba(0, 0, 0, 0.54);
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 2px 0px,
-    rgba(0, 0, 0, 0.24) 0px 0px 1px 0px;
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045) !important;
+  border: 0.5px solid rgba(0, 0, 0, 0.045) !important;
   padding: 9px;
   width: 100%;
   border-radius: 2px;
@@ -15,4 +15,14 @@
   cursor: pointer;
   opacity: 1;
   justify-content: center;
+}
+
+.caro-game-authen-wrapper {
+  margin-bottom: 15px;
+}
+
+.caro-game-authen-wrapper .ant-form-item-control-input-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
