feat: completely integrate create conversation

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,8 @@ code {
   font-family: BeVietNamMedium;
   src: url("./public/fonts/BeVietnam-Medium.ttf");
 }
+
+@font-face {
+  font-family: Arcade;
+  src: url("./public/fonts/ARCADECLASSIC.TTF");
+}
