--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,7 +1,7 @@
 #header {
   position: fixed;
   z-index: 999;
-  background: rgba(0, 0, 0, 0.712);
+  background: #001529;
   border-bottom: 1px solid transparent;
   transition: border 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955),
     background 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955);
