--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,21 @@ body {
   background-color: #f0f2f5 !important;
 }
 
+body::-webkit-scrollbar {
+  width: 5px;
+  border-radius: 10px;
+}
+
+/* Track */
+body::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+body::-webkit-scrollbar-thumb {
+  background: #bcc0c4;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
